--- a/full-list.html
+++ b/full-list.html
@@ -1,7 +1,8 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <html lang="en-US">
+    <html lang="en">
         <head>
+            <meta charset="utf-8">
             <link rel="stylesheet" href="page.css">
             <title>Indie Games List</title>
             <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
