--- a/pages/full-list.html
+++ b/pages/full-list.html
@@ -14,10 +14,10 @@
                 <h1><a href="index.html">Indie Games</a></h1>
             <div class="container">
                     <nav>
-                        <a href="to-play.html">To Play</a>
-                        <a href="reviews">Reviews</a>
-                        <a href="full-list.html">Indie-x</a>
-                        <a href="favorites">Favorites</a>
+                        <a href="pages/to-play.html">To Play</a>
+                        <a href="pages/reviews.html">Reviews</a>
+                        <a href="pages/full-list.html">Indie-x</a>
+                        <a href="pages/favorites.html">Favorites</a>
                     </nav>
             </div>
             </div>
