--- a/pages/full-list.html
+++ b/pages/full-list.html
@@ -11,7 +11,7 @@
         </head>
         <body>
             <div class="fixed-header">
-                <h1><a href="../index.html">Indie Games</a></h1>
+                <h1><a href="/index.html">Indie Games</a></h1>
             <div class="container">
                     <nav>
                         <a href="pages/to-play.html">To Play</a>
