Had a realization regarding broken links

--- a/pages/full-list.html
+++ b/pages/full-list.html
@@ -11,12 +11,12 @@
         </head>
         <body>
             <div class="fixed-header">
-                <h1><a href="/indie-games">Indie Games</a></h1> <!--please dear god work-->
+                <h1><a href="/indie-games/">Indie Games</a></h1> <!--please dear god work-->
             <div class="container">
                     <nav>
                         <a href="pages/to-play.html">To Play</a>
                         <a href="pages/reviews.html">Reviews</a>
-                        <a href="pages/full-list.html">Indie-x</a>
+                        <a href="full-list.html">Indie-x</a>
                         <a href="pages/favorites.html">Favorites</a>
                     </nav>
             </div>
