Finally fixed link issues??

--- a/pages/full-list.html
+++ b/pages/full-list.html
@@ -11,7 +11,7 @@
         </head>
         <body>
             <div class="fixed-header">
-                <h1><a href="/indie-games/">Indie Games</a></h1> <!--please dear god work-->
+                <h1><a href="/indie-games/index.html">Indie Games</a></h1> <!--please dear god work-->
             <div class="container">
                     <nav>
                         <a href="pages/to-play.html">To Play</a>
