Fix code nesting

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <DOCTYPE! html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <html lang="en-US">
-        <head>
-            <link rel="stylesheet" href="page.css">
-            <title>Indie Games List</title>
-            <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
-            <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Andika:wght@700&display=swap" rel="stylesheet">
-        </head>
-        <body>
-            <div class="fixed-header">
-                <h1><a href="index.html">Indie Games</a></h1>
-            <div class="container">
-                    <nav>
-                        <a href="pages/to-play.html">To Play</a>
-                        <a href="pages/reviews">Reviews</a>
-                        <a href="pages/full-list.html">Indie-x</a>
-                        <a href="pages/favorites">Favorites</a>
-                    </nav>
-            </div>
-            </div>
-        </body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="page.css">
+        <title>Indie Games List</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Andika:wght@700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="fixed-header">
+            <h1><a href="index.html">Indie Games</a></h1>
+        <div class="container">
+                <nav>
+                    <a href="pages/to-play.html">To Play</a>
+                    <a href="pages/reviews">Reviews</a>
+                    <a href="pages/full-list.html">Indie-x</a>
+                    <a href="pages/favorites">Favorites</a>
+                </nav>
+        </div>
+        </div>
+    </body>
+</html>
