--- a/pages/full-list.html
+++ b/pages/full-list.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="../page.css">
         <title>Indie Games List</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -14,10 +14,10 @@
             <h1><a href="/indie-games/index.html">Indie Games</a></h1> <!--please dear god work-->
         <div class="container">
                 <nav>
-                    <a href="pages/to-play.html">To Play</a>
-                    <a href="pages/reviews.html">Reviews</a>
+                    <a href="to-play.html">To Play</a>
+                    <a href="reviews.html">Reviews</a>
                     <a href="full-list.html">Indie-x</a>
-                    <a href="pages/favorites.html">Favorites</a>
+                    <a href="favorites.html">Favorites</a>
                 </nav>
         </div>
         </div>
