Add Favorites, Recently Played, and Reviews pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="page.css">
         <title>Indie Games List</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -13,12 +14,12 @@
         <div class="fixed-header">
             <h1><a href="index.html">Indie Games</a></h1>
         <div class="container">
-                <nav>
-                    <a href="pages/to-play.html">To Play</a>
-                    <a href="pages/reviews">Reviews</a>
-                    <a href="pages/full-list.html">Indie-x</a>
-                    <a href="pages/favorites">Favorites</a>
-                </nav>
+            <nav>
+                <a href="pages/recently-played.html">Recently Played</a>
+                <a href="pages/reviews">Reviews</a>
+                <a href="pages/full-list.html">Indie-x</a>
+                <a href="pages/favorites">Favorites</a>
+            </nav>
         </div>
         </div>
     </body>
