--- a/pages/full-list.html
+++ b/pages/full-list.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../page.css">
         <title>Indie Games List</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -11,10 +12,10 @@
     </head>
     <body>
         <div class="fixed-header">
-            <h1><a href="/indie-games/index.html">Indie Games</a></h1> <!--please dear god work-->
+            <h1><a href="/indie-games/index.html">Indie Games</a></h1>
         <div class="container">
                 <nav>
-                    <a href="to-play.html">To Play</a>
+                    <a href="recently-played.html">Recently Played</a>
                     <a href="reviews.html">Reviews</a>
                     <a href="full-list.html">Indie-x</a>
                     <a href="favorites.html">Favorites</a>
